--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
 .App-header {
   text-align: center;
-  padding: 30px 0;
+  margin: 30px 0;
+  color: green;
+  font-size: 48px;
+  font-weight: 500;
+}
+
+.App-footer {
+  text-align: center;
+  margin: 30px 0;
 }
