--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background: #dde0ab;
+}
+
 .App-header {
   text-align: center;
   margin: 30px 0;
@@ -9,4 +13,8 @@
 .App-footer {
   text-align: center;
   margin: 30px 0;
+}
+
+.container {
+  width: 600px;
 }
