--- a/src/Synonyms.css
+++ b/src/Synonyms.css
@@ -1,3 +1,11 @@
+.Synonyms {
+  margin: 20px 0px 0px;
+  padding: 0;
+}
+
 .Synonyms li {
-  list-style: none;
+  display: inline-block;
+  font-size: 13px;
+  margin-right: 12px;
+  line-height: 1;
 }
