--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 body {
   background: #dde0ab;
 }
-
+.App {
+  max-width: 960px;
+  margin: 0 auto;
+}
 .App-header {
   text-align: center;
   margin: 30px 0;
@@ -13,8 +16,4 @@ body {
 .App-footer {
   text-align: center;
   margin: 30px 0;
-}
-
-.container {
-  width: 600px;
 }
