--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -6,6 +6,12 @@
   box-shadow: 5px 5px 5px green;
 }
 
+.Dictionary h3 {
+  font-size: 16px;
+  opacity: 0.8;
+  margin-bottom: 20px;
+}
+
 .Dictionary input {
   width: 100%;
   padding: 6px 4px 6px 8px;
