--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 body {
   background: #dde0ab;
 }
+
 .App {
-  max-width: 960px;
+  max-width: 800px;
   margin: 0 auto;
 }
+
 .App-header {
   text-align: center;
   margin: 30px 0;
@@ -16,4 +18,13 @@ body {
 .App-footer {
   text-align: center;
   margin: 30px 0;
+}
+.App-footer a {
+  color: green;
+  text-decoration: none;
+}
+@media (max-width: 600px) {
+  .App-header {
+    font-size: 36px;
+  }
 }
