--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -1,12 +1,12 @@
 .Meaning h3 {
   color: #2a2438;
-  font-size: 20px;
+  opacity: 0.8;
   font-weight: bold;
+  font-size: 18px;
   line-height: 1.5;
 }
 .Meaning .definition {
   font-size: 15px;
-
   line-height: 1.5;
   margin-bottom: 10px;
 }
