--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,39 @@
 body {
-  background: #dde0ab;
+  background: #2d4059;
 }
 
 .App {
-  max-width: 800px;
+  font-family: "DM Sans", sans-serif;
+  max-width: 720px;
   margin: 0 auto;
 }
 
 .App-header {
+  font-family: "Tilt Warp", cursive;
   text-align: center;
   margin: 30px 0;
-  color: green;
+  color: #ff5722;
   font-size: 48px;
   font-weight: 500;
 }
 
 .App-footer {
+  color: #ff5722;
   text-align: center;
   margin: 30px 0;
 }
 .App-footer a {
-  color: green;
+  color: #ff5722;
   text-decoration: none;
 }
-@media (max-width: 600px) {
+.App-footer a:hover {
+  color: #eeeeee;
+}
+@media (max-width: 500px) {
   .App-header {
     font-size: 36px;
+  }
+  .App-footer {
+    font-size: 12px;
   }
 }
