--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -4,14 +4,19 @@
   font-weight: bold;
   font-size: 18px;
   line-height: 1.5;
+  text-align: left;
 }
 .Meaning .definition {
+  display: block;
+  text-align: left;
   font-size: 15px;
   line-height: 1.5;
   margin-bottom: 10px;
 }
 .Meaning .example {
+  display: block;
+  text-align: left;
   font-size: 14px;
-  opacity: 0.7;
+  opacity: 0.8;
   font-style: italic;
 }
